feat: Add API for all registered students with caching
